--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Top Dog</title>
   </head>
+
   <body>
-    <div id="app"></div>
+    <header>
+      <a href="/">
+        <img src="/logo.svg" alt="logo" />
+      </a>
+
+      <nav>
+        <div>
+          <a href="/">Home</a>
+          <a href="/createTierList">Create</a>
+        </div>
+
+        <a href="/login">Log in</a>
+        <img src="/profile.svg" alt="profile icon" class="size-8" />
+      </nav>
+    </header>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
