--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Top Dog</title>
   </head>
 
-  <body class="text-slate-800 font-lexend font-medium">
+  <body class="text-zinc-800 font-lexend font-medium">
     <header class="flex p-4 justify-between absolute w-full">
       <a href="/">
         <img src="/logo.svg" alt="logo" />
@@ -38,18 +38,18 @@
 
     <main class="w-full px-40 pt-36 gap-8 flex flex-col">
       <div>
-        <h1 class="text-xl">Create a tier list for anything</h1>
+        <h1 class="text-xl text-zinc-900">Create a tier list for anything</h1>
         <p>
           Easily organize items into tiers, grouping similar ones together from
           best to worst.
         </p>
       </div>
       <section>
-        <h2>Top Dog featured</h2>
+        <h2 class="text-zinc-900">Top Dog featured</h2>
         <div>Lists</div>
       </section>
       <section>
-        <h2>Your tier list</h2>
+        <h2 class="text-zinc-900">Your tier list</h2>
         <div>Lists</div>
       </section>
     </main>
