chanage a element to propper href

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="/createTierList" class="link">Create tier list</a>
         </div>
 
-        <a href="/login" class="button">Log in</a>
+        <a href="/log-in" class="button">Log in</a>
         <!-- <img src="/profile.svg" alt="profile icon" class="size-8" /> -->
       </nav>
     </header>
