--- a/sign-up.html
+++ b/sign-up.html
@@ -32,20 +32,20 @@
           <a href="/createTierList" class="link">Create tier list</a>
         </div>
 
-        <a href="/login" class="button">Log in</a>
+        <a href="/log-in" class="button">Log in</a>
         <!-- <img src="/profile.svg" alt="profile icon" class="size-8" /> -->
       </nav>
     </header>
 
     <main
-      class="w-full grow max-w-lg px-4 pt-30 pb-12 flex flex-col items-center h-full flex-between"
+      class="w-full grow max-w-lg px-4 pt-30 pb-12 flex flex-col items-center h-full justify-between"
     >
       <section class="flex grow flex-col gap-8 w-full">
         <h2 class="font-bold w-full text-center text-2xl text-zinc-950">
           Create the bark in you!
         </h2>
 
-        <form id="sign-up" class="flex flex-col flex-between gap-8">
+        <form id="sign-up" class="flex flex-col gap-8">
           <div class="flex flex-col gap-4">
             <div class="input">
               <div>
@@ -112,6 +112,11 @@
           <span id="error" class="text-red-400 text-end font-bold"></span>
         </form>
       </section>
+
+      <span class="flex gap-1.5">
+        <p>Already part of the flock?</p>
+        <a href="/log-in" class="text-blue-400 hover:underline">Log in</a>
+      </span>
     </main>
     <script type="module" src="/src/signUp.ts"></script>
   </body>
