--- a/index.html
+++ b/index.html
@@ -22,22 +22,7 @@
   <body
     class="text-zinc-800 font-lexend font-medium flex flex-col items-center"
   >
-    <header class="flex p-4 justify-between absolute w-full">
-      <a href="/">
-        <img src="/logo.svg" alt="logo" />
-      </a>
-
-      <nav class="px-4 flex md:gap-8 items-center">
-        <div class="hidden text-zinc-700 md:flex md:gap-8">
-          <a href="/" class="link">Home</a>
-          <a href="/createTierList" class="link">Create tier list</a>
-        </div>
-
-        <a href="/log-in" class="button">Log in</a>
-        <!-- <img src="/profile.svg" alt="profile icon" class="size-8" /> -->
-      </nav>
-    </header>
-
+    <div id="header"></div>
     <main class="max-w-5xl p-4 pt-36 gap-8 flex flex-col">
       <div>
         <h1 class="text-xl text-zinc-900">Create a tier list for anything</h1>
