create list page

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
   <nav class="px-4 flex md:gap-8 items-center">
     <div class="hidden text-zinc-700 md:flex md:gap-8">
       <a href="/" class="link">Home</a>
-      <a href="/createTierList" class="link">Create tier list</a>
+      <a href="/create-list" id="createList" class="link">Create tier list</a>
     </div>
 
     <a href="/log-in" class="button">Log in</a>
