--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     class="text-zinc-800 font-lexend font-medium flex flex-col items-center"
   >
     <div id="header"></div>
-    <main class="max-w-5xl p-4 pt-36 gap-8 flex flex-col">
+    <main class="max-w-5xl w-full p-4 pt-36 gap-8 flex flex-col">
       <div>
         <h1 class="text-xl text-zinc-900">Create a tier list for anything</h1>
         <p>
@@ -37,10 +37,7 @@
       </section> -->
       <section class="flex flex-col gap-2">
         <h2 class="text-zinc-900">Top Dog featured</h2>
-        <ul
-          id="featured"
-          class="flex flex-row items-center gap-4 overflow-x-scroll"
-        ></ul>
+        <ul id="featured" class="flex flex-row gap-4 overflow-x-scroll"></ul>
       </section>
     </main>
     <script type="module" src="/src/main.ts"></script>
