--- a/list.html
+++ b/list.html
@@ -24,36 +24,71 @@
   >
     <div id="header"></div>
 
-    <main class="max-w-5xl p-4 pt-36 gap-8 flex flex-col">
+    <main class="w-full max-w-5xl p-4 pt-36 gap-8 flex flex-col">
       <section class="grow flex flex-col gap-3">
         <div class="flex w-full gap-4">
-          <h2 class="w-full text-zinc-950 text-xl">My new tier list</h2>
-          <button class="size-8 p-1">
+          <h2 id="listTitle" class="w-full text-zinc-950 text-xl"></h2>
+          <button id="open-settings" class="size-8 p-1">
             <i data-lucide="settings" class="size-6 text-zinc-400"></i>
           </button>
         </div>
 
-        <p class="text-zinc-400 text-sm">
-          A long description about how nice and handsome this tierlist can be
-          when saying something cool in here
-        </p>
+        <p id="description" class="text-zinc-400 text-sm"></p>
 
         <div class="flex items-center gap-2">
           <img src="/profile.svg" alt="profile" class="size-6" />
-          <p class="text-xs text-zinc-950">@username</p>
+          <p id="username" class="text-xs text-zinc-950"></p>
         </div>
       </section>
 
-      <ul class="w-full">
-        <li class="h-20 md:h-28">
-          <div
-            class="size-20 md:size-28 bg-red-400 flex items-center justify-center"
-          >
-            <p class="text-center break-words min-w-0 line-clamp-4">Tier</p>
-          </div>
-        </li>
-      </ul>
+      <ul id="tiers" class="w-full"></ul>
     </main>
+
+    <div
+      id="tier-list-settings-modal"
+      class="hidden inset-0 flex-col items-center justify-between px-6 py-32 fixed bg-zinc-200/60 backdrop-blur-sm"
+    >
+      <form id="tier-list-settings" class="gap-8 w-full flex flex-col">
+        <div class="w-full flex justify-end">
+          <button class="p-1">
+            <i data-lucide="x" class="size-6 text-zinc-800"></i>
+          </button>
+        </div>
+
+        <div class="flex flex-col gap-4">
+          <div class="input">
+            <div>
+              <label for="name">Name</label>
+            </div>
+            <input
+              class="bg-white/80 backdrop-blur-sm"
+              type="text"
+              name="name"
+              id="name"
+              placeholder="A good tier list name"
+            />
+          </div>
+
+          <div class="input">
+            <div>
+              <label for="description">Description</label>
+            </div>
+            <input
+              class="bg-white/80 backdrop-blur-sm"
+              type="text"
+              name="description"
+              id="description"
+              placeholder="A fitting description"
+            />
+          </div>
+        </div>
+      </form>
+
+      <button type="button" class="button justify-between items-center w-full">
+        <span>Delete list</span>
+        <i data-lucide="trash-2" class="size-6 text-white"></i>
+      </button>
+    </div>
     <script type="module" src="/src/list.ts"></script>
   </body>
 </html>
