--- a/list.html
+++ b/list.html
@@ -29,7 +29,7 @@
         <div class="flex w-full gap-4">
           <h2 id="listTitle" class="w-full text-zinc-950 text-xl"></h2>
 
-          <button id="open-settings" class="size-8 p-1 hidden">
+          <button id="open-settings" class="size-8 p-1 hidden cursor-pointer">
             <i data-lucide="settings" class="size-6 text-zinc-400"></i>
           </button>
         </div>
@@ -56,7 +56,7 @@
     >
       <form id="tier-list-settings" class="gap-8 w-full flex flex-col">
         <div class="w-full flex justify-end">
-          <button class="p-1">
+          <button class="p-1 cursor-pointer">
             <i data-lucide="x" class="size-6 text-zinc-800"></i>
           </button>
         </div>
@@ -90,7 +90,11 @@
         </div>
       </form>
 
-      <button type="button" class="button justify-between items-center w-full">
+      <button
+        type="button"
+        id="delete"
+        class="button justify-between items-center w-full"
+      >
         <span>Delete list</span>
         <i data-lucide="trash-2" class="size-6 text-white"></i>
       </button>
