make header in js

--- a/create-list.html
+++ b/create-list.html
@@ -19,7 +19,7 @@
   </head>
   
   <body class="text-zinc-800 font-lexend font-normal min-h-screen flex flex-col items-center">
-    <div id="header"></div>
+    <header id="header"></header>
 
     <main
       class="w-full grow max-w-lg px-4 pt-30 pb-12 flex flex-col items-center h-full justify-between"
