--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body
     class="text-zinc-800 font-lexend font-medium flex flex-col items-center"
   >
-    <div id="header"></div>
+    <header id="header"></header>
     <main class="max-w-5xl w-full p-4 pt-36 gap-8 flex flex-col">
       <div>
         <h1 class="text-xl text-zinc-900">Create a tier list for anything</h1>
