--- a/list.html
+++ b/list.html
@@ -22,7 +22,7 @@
   <body
     class="text-zinc-800 font-lexend font-medium flex flex-col items-center"
   >
-    <div id="header"></div>
+    <header id="header"></header>
 
     <main class="w-full max-w-5xl p-4 pt-36 gap-8 flex flex-col">
       <section class="grow flex flex-col gap-3">
